--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -21,4 +21,16 @@
     <color name="gridview_content_color">#FF333333</color>
     <color name="gridview_description_color">#FF999999</color>
     
+    <!-- Text color -->
+	<color name="text_color_orange">#FFFF7600</color>
+	<color name="text_color_black">#FF222222</color>
+	<color name="text_color_dark_grey">#FF444444</color>
+	<color name="text_color_grey">#FF989898</color>
+	<color name="text_color_white">#FFFFFFFF</color>
+	
+	<color name="blue">#FF64B8FF</color>
+	
+	<!-- Color used for the letter in the A-Z section header -->
+    <color name="section_header_text_color">#ff999999</color>
+    
 </resources>
