--- a/res/layout/list_item_1.xml
+++ b/res/layout/list_item_1.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
-    android:minHeight="48dp"
+    android:layout_height="@dimen/list_item_height"
+    android:minHeight="@dimen/list_item_height"
+    android:maxHeight="@dimen/list_item_height"
     android:orientation="vertical"
     android:gravity="center_vertical"
     >
-    
    
     <TextView android:id="@+android:id/text1"
         android:layout_width="match_parent"
@@ -15,7 +15,6 @@
         android:paddingLeft="8dip"
         android:paddingRight="8dip"
         android:textColor="@color/text_color_black"
-        android:background="@color/text_color_grey"
         android:gravity="center_vertical"/>
     
 	<View android:layout_width="match_parent"
